Changed container width to 80%, as fixed width was not responsive

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 .container{
-    width: 960px;
+    width: 80%;
     margin: auto;
 }
 
